--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,15 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="wrapper"></div>
     <header class="page-header">
-      <div class="container">
-        <nav>
+      <div class="container header-container">
+        <nav class="header-nav">
           <a class="nav-logo link" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
           >
           <ul class="list nav-menu">
-            <li class="item"><a class="link current" href="./index.html">Студія</a></li>
+            <li class="item"><a class="link current" href="index.html">Студія</a></li>
             <li class="item">
               <a class="link" href="" rel="nofollow noreferrer noopener">Портфоліо</a>
             </li>
@@ -44,9 +45,9 @@
         </ul>
       </div>
     </header>
-    <main>
+    <main class="main">
       <section class="portfolio-works section">
-        <div class="container">
+        <div class="container potfolio-flex">
           <h2 class="visually-hidden">Наші роботи</h2>
           <ul class="list portfolio-nav">
             <li><button class="portfolio-button" type="button">Усі</button></li>
@@ -59,7 +60,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img4).jpg"
+                src="./images/Our-works/img4).jpg"
                 alt="Ноутбук та три фото на фоні"
                 width="370"
                 height="294"
@@ -70,7 +71,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img(5).jpg"
+                src="./images/Our-works/img(5).jpg"
                 alt="Два чоловіка та баскетбольний мяч"
                 width="370"
                 height="294"
@@ -81,7 +82,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img6.jpg"
+                src="./images/Our-works/img6.jpg"
                 alt="риба, сіа фуд"
                 width="370"
                 height="294"
@@ -92,7 +93,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img(7).jpg"
+                src="./images/Our-works/img(7).jpg"
                 alt="Навушники"
                 width="370"
                 height="294"
@@ -103,7 +104,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img(8).jpg"
+                src="./images/Our-works/img(8).jpg"
                 alt="Дві коробочки"
                 width="370"
                 height="294"
@@ -114,7 +115,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img(9).jpg"
+                src="./images/Our-works/img(9).jpg"
                 alt="Екран та темний фон"
                 width="370"
                 height="294"
@@ -125,7 +126,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img10).jpg"
+                src="./images/Our-works/img10).jpg"
                 alt="Журнал, лімітед едішин"
                 width="370"
                 height="294"
@@ -136,7 +137,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img(11).jpg"
+                src="./images/Our-works/img(11).jpg"
                 alt="Лейбел тег"
                 width="370"
                 height="294"
@@ -147,7 +148,7 @@
             <li class="item">
               <img
                 class="portfolio-pic"
-                src="./images/Our works/img(12).jpg"
+                src="./images/Our-works/img(12).jpg"
                 alt="на екрані ноутбука написано гровінг бізнес"
                 width="370"
                 height="294"
@@ -168,6 +169,7 @@
           <ul class="footer-menu list">
             <li class="item">
               <a
+                target="_blank"
                 class="link footer-address"
                 href="https://goo.gl/maps/cGYP9RKYjH99nXD27"
                 rel="noreferrer noopener nofollow"
@@ -182,5 +184,6 @@
         </address>
       </div>
     </footer>
+    </div>
   </body>
 </html>
