--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <section class="team section">
           <div class="container">
-            <h2 class="visually-hidden">Наша команда</h2>
+            <h2 class="team-name">Наша команда</h2>
             <ul class="list team-menu">
               <li class="item">
                 <img
@@ -128,8 +128,10 @@
                   width="270"
                   height="260"
                 />
+                <div class="team-padding-30">
                 <h3 class="team-title">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
+                </div>
               </li>
               <li class="item">
                 <img
@@ -139,8 +141,10 @@
                   width="270"
                   height="260"
                 />
+                <div class="team-padding-30">
                 <h3 class="team-title">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
+                </div>
               </li>
               <li class="item">
                 <img
@@ -150,8 +154,10 @@
                   width="270"
                   height="260"
                 />
+                <div class="team-padding-30">
                 <h3 class="team-title">Микола Тарасов</h3>
                 <p class="team-position">Marketing</p>
+                </div>
               </li>
               <li class="item">
                 <img
