--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Технокряк</h3>
               <p class="portfolio-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -76,8 +78,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
               <p class="portfolio-text">Дизайн</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -87,8 +91,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Ресторан Seafood</h3>
               <p class="portfolio-text">Додаток</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -98,8 +104,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Проєкт Prime</h3>
               <p class="portfolio-text">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -109,8 +117,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Проєкт Boxes</h3>
               <p class="portfolio-text">Додаток</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -120,8 +130,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Inspiration has no Borders</h3>
               <p class="portfolio-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -131,8 +143,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Видання Limited Edition</h3>
               <p class="portfolio-text">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -142,8 +156,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Проєкт LAB</h3>
               <p class="portfolio-text">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -153,8 +169,10 @@
                 width="370"
                 height="294"
               />
+              <div class="portfolio-title-text">
               <h3 class="portfolio-title">Growing Business</h3>
               <p class="portfolio-text">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
