Revert "last fixes hometask"
This reverts commit 0c439ea6cb920d969bd4c149958e6cfadbab0c67.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <section class="team section">
           <div class="container">
-            <h2 class="team-name">Наша команда</h2>
+            <h2 class="visually-hidden">Наша команда</h2>
             <ul class="list team-menu">
               <li class="item">
                 <img
@@ -128,10 +128,8 @@
                   width="270"
                   height="260"
                 />
-                <div class="team-padding-30">
                 <h3 class="team-title">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
-                </div>
               </li>
               <li class="item">
                 <img
@@ -141,10 +139,8 @@
                   width="270"
                   height="260"
                 />
-                <div class="team-padding-30">
                 <h3 class="team-title">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
-                </div>
               </li>
               <li class="item">
                 <img
@@ -154,10 +150,8 @@
                   width="270"
                   height="260"
                 />
-                <div class="team-padding-30">
                 <h3 class="team-title">Микола Тарасов</h3>
                 <p class="team-position">Marketing</p>
-                </div>
               </li>
               <li class="item">
                 <img
