fixed after mentor checking

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <section class="team section">
           <div class="container">
-            <h2 class="visually-hidden">Наша команда</h2>
+            <h2 class="our-team-title">Наша команда</h2>
             <ul class="list team-menu">
               <li class="item">
                 <img
@@ -127,9 +127,10 @@
                   alt=""
                   width="270"
                   height="260"
-                />
+                /> <div class="team-dscpr">
                 <h3 class="team-title">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
+                </div>
               </li>
               <li class="item">
                 <img
@@ -138,9 +139,10 @@
                   alt=""
                   width="270"
                   height="260"
-                />
+                /> <div class="team-dscpr">
                 <h3 class="team-title">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
+                </div>
               </li>
               <li class="item">
                 <img
@@ -149,9 +151,10 @@
                   alt=""
                   width="270"
                   height="260"
-                />
+                /> <div class="team-dscpr">
                 <h3 class="team-title">Микола Тарасов</h3>
                 <p class="team-position">Marketing</p>
+                </div>
               </li>
               <li class="item">
                 <img
@@ -160,9 +163,10 @@
                   alt=""
                   width="270"
                   height="260"
-                />
+                /> <div class="team-dscpr">
                 <h3 class="team-title">Михайло Єрмаков</h3>
                 <p class="team-position">UI Designer</p>
+              </div>
               </li>
             </ul>
           </div>
@@ -175,17 +179,17 @@
           >
           <address>
             <ul class="footer-menu list">
-              <li class="item">
+              <li class="item footer-address">
                 <a
                   target="_blank"
-                  class="link footer-address"
+                  class="link"
                   href="https://goo.gl/maps/cGYP9RKYjH99nXD27"
                   rel="noreferrer noopener nofollow"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="item">
-                <a class="link footer-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <li class="item footer-email">
+                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="item"><a class="link" href="tell:+380961111111">+38 096 111 11 11</a></li>
             </ul>
