--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
     <header class="page-header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -64,9 +64,10 @@
                 alt="Ноутбук та три фото на фоні"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Технокряк</h3>
               <p class="portfolio-text">Веб-сайт</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -75,9 +76,10 @@
                 alt="Два чоловіка та баскетбольний мяч"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
               <p class="portfolio-text">Дизайн</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -86,9 +88,10 @@
                 alt="риба, сіа фуд"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Ресторан Seafood</h3>
               <p class="portfolio-text">Додаток</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -97,9 +100,10 @@
                 alt="Навушники"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Проєкт Prime</h3>
               <p class="portfolio-text">Маркетинг</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -108,9 +112,10 @@
                 alt="Дві коробочки"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Проєкт Boxes</h3>
               <p class="portfolio-text">Додаток</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -119,9 +124,10 @@
                 alt="Екран та темний фон"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Inspiration has no Borders</h3>
               <p class="portfolio-text">Веб-сайт</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -130,9 +136,10 @@
                 alt="Журнал, лімітед едішин"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Видання Limited Edition</h3>
               <p class="portfolio-text">Дизайн</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -141,9 +148,10 @@
                 alt="Лейбел тег"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Проєкт LAB</h3>
               <p class="portfolio-text">Маркетинг</p>
+            </div>
             </li>
             <li class="item">
               <img
@@ -152,9 +160,10 @@
                 alt="на екрані ноутбука написано гровінг бізнес"
                 width="370"
                 height="294"
-              />
+              /> <div class="portfolio-content">
               <h3 class="portfolio-title">Growing Business</h3>
               <p class="portfolio-text">Додаток</p>
+            </div>
             </li>
           </ul>
         </div>
@@ -167,17 +176,17 @@
         >
         <address>
           <ul class="footer-menu list">
-            <li class="item">
+            <li class="item footer-address">
               <a
                 target="_blank"
-                class="link footer-address"
+                class="link"
                 href="https://goo.gl/maps/cGYP9RKYjH99nXD27"
                 rel="noreferrer noopener nofollow"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="item">
-              <a class="link footer-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="item footer-email">
+              <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="item"><a class="link" href="tell:+380961111111">+38 096 111 11 11</a></li>
           </ul>
